--- a/translations/en/onboarding.json
+++ b/translations/en/onboarding.json
@@ -5,17 +5,20 @@
 	},
 	"importScreen": {
 		"header": "Would you want to import your data?",
-		"prevInstall": "Previous installation",
-		"simplyPlural": "Simply Plural",
-		"pluralKit": "PluralKit",
+		"prevInstall": "Yes, previous installation",
+		"simplyPlural": "Yes, Simply Plural",
+		"pluralKit": "Yes, PluralKit",
 		"startFromScratch": "No, I'll start from scratch",
 		"pleaseWait": "Please wait while we import your data"
 	},
 	"systemInfo": {
-		"header": "Tell us about your system!"
+		"header": "Tell us about your system!",
+		"name": "Collective name",
+		"description": "A little about all of you..."
 	},
 	"memberInfo": {
 		"header": "Tell us more about you!",
+		"description": "A little about yourself...",
 		"invitation": "Keep editing your profile card after you’re done with the onboarding!"
 	},
 	"endScreen": {
