build separate CI APK, drop armv7

--- a/src-tauri/gen/android/app/src/main/res/values/strings.xml
+++ b/src-tauri/gen/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Ampersand</string>
-    <string name="main_activity_title">Ampersand</string>
+    <string name="app_name_ci">Ampersand (CI)</string>
+    <string name="app_name_debug">Ampersand (Debug)</string>
 </resources>
