--- a/translations/it/other.json
+++ b/translations/it/other.json
@@ -1,4 +1,6 @@
 {
+	"genericDeleteDesc": "Non potrai annullare questa azione!",
+
 	"languageName": {
 		"local": "Italiano",
 		"inEnglish": "Italian"
