--- a/translations/ro/other.json
+++ b/translations/ro/other.json
@@ -1,4 +1,6 @@
 {
+	"genericDeleteDesc": "Atenție! Nu veți putea anula această acțiune!",
+
 	"languageName": {
 		"local": "Romănă",
 		"inEnglish": "Romanian"
