--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -28,8 +28,7 @@
 			},
 			"isMainFronter": "Main fronter?",
 			"delete": {
-				"title": "Delete fronting entry",
-				"desc": "You won't be able to undo this action!"
+				"title": "Delete fronting entry"
 			}
 		}
 	},
@@ -49,8 +48,7 @@
 			"pollChoice": "Choice description",
 			"pollEditWarning": "Changing any of the poll details will reset the votes!",
 			"delete": {
-				"title": "Delete message on board",
-				"desc": "You won't be able to undo this action!"
+				"title": "Delete message on board"
 			}
 		}
 	},
@@ -88,7 +86,6 @@
 				},
 				"delete": {
 					"title": "Delete tag",
-					"desc": "You won't be able to undo this action!",
 					"confirm": "Are you sure you want to delete this tag?"
 				}
 			}
@@ -109,8 +106,7 @@
 		},
 
 		"delete": {
-			"title": "Delete asset",
-			"desc": "You won't be able to undo this action!"
+			"title": "Delete asset"
 		}
 	},
 	"reminders": {
