--- a/translations/en/other.json
+++ b/translations/en/other.json
@@ -1,4 +1,6 @@
-{
+{	
+	"genericDeleteDesc": "You won't be able to undo this action!",
+
 	"languageName": {
 		"local": "English",
 		"inEnglish": "English"
