--- a/translations/en/options.json
+++ b/translations/en/options.json
@@ -43,7 +43,7 @@
 			"isPinned": "Set as pinned",
 			"attachPoll": "Attach a poll to this message",
 			"deleteAttachedPoll": "Delete attached poll",
-			"pollIsMultipleChoice": "Set poll as multiple choice",
+			"pollIsMultipleChoice": "Allow selecting multiple choices",
 			"pollAddNewChoice": "Add a new choice to the poll",
 			"pollChoice": "Choice description",
 			"pollEditWarning": "Changing any of the poll details will reset the votes!",
