--- a/translations/it/options.json
+++ b/translations/it/options.json
@@ -258,27 +258,11 @@
 			"title": "Esporta i tuoi dati",
 			"desc": "Fai il backup dei tuoi dati così da poterli tenere da qualche altra parte"
 		},
-		"settingsImport": {
-			"title": "Importa la configurazione delle tue impostazioni dell'app",
-			"desc": "Attenzione! Questo sovvrascriverà la tua configurazione delle impostazioni corrente"
-		},
-		"settingsExport": {
-			"title": "Esporta la configurazione delle tue impostazioni dell'app",
-			"desc": "Fai il backup dei tuoi dati delle impostazioni così da poterli reimportare in seguito"
-		},
 		"status": {
-			"database": {
-				"imported": "Il backup del database è stato importato. Si prega di far ripartire l'app.",
-				"exportedPwa": "Il backup del database è stato scaricato nella tua cartella degli scaricati.",
-				"exportedApp": "Il backup del database è stato esportato nella posizione scelta.",
-				"error": "Errore durante l'elaborazione dell'esportazione del database."
-			},
-			"settings": {
-				"imported": "La configurazione delle impostazioni è stata importata. Si prega di far ripartire l'app.",
-				"exportedPwa": "Il backup delle impostazioni è stato scaricato nella tua cartella degli scaricati.",
-				"exportedApp": "Il backup delle impostazioni è stato esportato nella posizione scelta.",
-				"error": "Errore durante l'elaborazione dell'esportazione delle impostazioni."
-			}
+			"imported": "Il backup è stato importato. Si prega di far ripartire l'app.",
+			"exportedPwa": "Il backup è stato scaricato nella tua cartella degli scaricati.",
+			"exportedApp": "Il backup è stato esportato nella posizione scelta.",
+			"error": "Errore durante l'esportazione del backup."
 		}
 	},
 	"about": {
