--- a/translations/it/members.json
+++ b/translations/it/members.json
@@ -25,11 +25,12 @@
 		"isArchived": "Imposta come archiviatə",
 		"showBoardEntries": "Mostra i messaggi sulla bacheca",
 		"showJournalEntries": "Mostra le pagine sul diario",
-		"delete": {
-			"title": "Cancella membrə"
-		},
 		"memberID": "ID dellə membrə: {{memberID}}",
 		"dateCreated": "Data di creazione: {{dateCreated}}",
-		"memberIDcopiedToClipboard": "ID dellə membrə in formato menzione copiato negli appunti!"
+		"memberIDcopiedToClipboard": "ID dellə membrə in formato menzione copiato negli appunti!",
+		"delete": {
+			"title": "Elimina membrə",
+			"confirm": "Vuoi davvero eliminare questə membrə?"
+		}
 	}
 }
