--- a/translations/it/onboarding.json
+++ b/translations/it/onboarding.json
@@ -9,7 +9,7 @@
 		"simplyPlural": "Si, Simply Plural",
 		"pluralKit": "Si, PluralKit",
 		"startFromScratch": "No, inizierò da zero",
-		"pleaseWait": "Si prega di attendere mentre importiamo i tuoi dati"
+		"pleaseWait": "Attendi mentre importiamo i tuoi dati"
 	},
 	"systemInfo": {
 		"header": "Parlaci del tuo sistema!",
