--- a/translations/it/other.json
+++ b/translations/it/other.json
@@ -4,21 +4,15 @@
 		"inEnglish": "Italian"
 	},
 	"genericDeleteDesc": "Non potrai annullare questa azione!",
-	"taglistSelect": {
-		"header": "Seleziona alcuni tag"
-	},
 	"storagePersistence": {
-		"header": "Warning",
+		"header": "Attenzione",
 		"content": "Ampersand non può immagazzinare i dati in modo persistente sul tuo dispositivo Se sei su Firefox, si prega di dare ad Ampersand il permesso per poterlo fare. Se sei su un browser basato su Chromium (come Chrome, Edge, Opera GX, Vivaldi, ecc...), si prega di installare Ampersand come una web app / aggiungerlo alla schermata home. Se questo messaggio non sparisce, si consideri di fare spesso il backup dei dati dalla sezione Importa/Esporta."
 	},
 	"alerts": {
 		"ok": "Ok",
-		"cancel": "Cancella"
+		"cancel": "Annulla"
 	},
-	"remindersAreNotFinished": {
-		"header": "I promemoria non sono finiti!",
-		"content": "Al momento, tutto questo è solo un'anteprima dell'interfaccia utente! A un certo punto potrete salvare i vostri promemoria, ma tenete presente che nulla è ancora collegato ad alcun sistema di notifica! Se siete su Android dovreste già essere in grado di configurare alcune cose che funzioneranno quando avremo completato il sistema sottostante, ma tenete presente che questo non funzionerà sulla versione Web, quindi non fatevi prendere dall'entusiasmo di usare i promemoria sul vostro computer. Inoltre, se siete sviluppatori, aiutateci!"
-	},
+	"time": "Ora",
 	"timeSizes": {
 		"years": {
 			"long": "anni",
@@ -52,21 +46,6 @@
 		"seconds": {
 			"long": "seconds",
 			"short": "s"
-		}
-	},
-	"polls": {
-		"boardMessageContainsPoll": "Contiene sondaggio",
-		"voteCast": {
-			"voter": "Seleziona il votantə",
-			"reason": "Dai la ragione",
-			"reasonHint": "Ragione",
-			"retractConfirmation": "Sei sicurə di voler rescindere il voto?"
-		},
-		"resultsHeader": "Risultati dei voti",
-		"resultsButton": "Mostra i risultati del sondaggio",
-		"choice": {
-			"desc_one": "{{count}} votantə",
-			"desc_other": "{{count}} votantɜ"
 		}
 	}
 }
