simplify app settings translations even more

--- a/translations/it/appSettings.json
+++ b/translations/it/appSettings.json
@@ -8,26 +8,9 @@
 			"12h": "12 ore",
 			"24h": "24 ore"
 		},
-		"firstDayOfWeek": {
-			"title": "Primo giorno della settimana",
-			"sunday": "Domenica",
-			"monday": "Lunedi"
-		}
+		"firstDayOfWeek": "Primo giorno della settimana"
 	},
 	"behaviorLabel": "Comportamento",
-	"view": {
-		"title": "Tab predefinita",
-		"members": "Membri",
-		"journal": "Diario",
-		"dashboard": "Dashboard",
-		"chat": "Chat"
-	},
-	"defaultFilterLabel": "Ricerca predefinita per",
-	"defaultFilterQueries": {
-		"members": "Membrɜ",
-		"journal": "Diario",
-		"tags": "Tag",
-		"frontingHistory": "Cronologia del front",
-		"messageBoard": "Bacheca dei messaggi"
-	}
+	"view": "Scheda predefinita",
+	"defaultFilterLabel": "Ricerca predefinita per"
 }
