--- a/translations/ro/appSettings.json
+++ b/translations/ro/appSettings.json
@@ -8,26 +8,9 @@
 			"12h": "12 ore",
 			"24h": "24 de ore"
 		},
-		"firstDayOfWeek": {
-			"title": "Prima zi a saptămânii",
-			"sunday": "Duminică",
-			"monday": "Luni"
-		}
+		"firstDayOfWeek": "Prima zi a saptămânii"
 	},
 	"behaviorLabel": "Comportament",
-	"view": {
-		"title": "Pagina prestabilită",
-		"members": "Membri",
-		"journal": "Jurnal",
-		"dashboard": "Tablou de bord",
-		"chat": "Chaturi"
-	},
-	"defaultFilterLabel": "Căutarea prestabilită pentru",
-	"defaultFilterQueries": {
-		"members": "Membri",
-		"journal": "Jurnal",
-		"tags": "Etichete",
-		"frontingHistory": "Istoricul frontului",
-		"messageBoard": "Tabla cu mesaje"
-	}
+	"view": "Pagina prestabilită",
+	"defaultFilterLabel": "Căutarea prestabilită pentru"
 }
