--- a/translations/ro/other.json
+++ b/translations/ro/other.json
@@ -11,5 +11,11 @@
 	"alerts": {
 		"ok": "Ok",
 		"cancel": "Anulați"
+	},
+	"timeSizes": {
+		"weekdays": {
+			"monday": "Luni",
+			"sunday": "Duminică"
+		}
 	}
 }
