--- a/translations/en/appSettings.json
+++ b/translations/en/appSettings.json
@@ -8,26 +8,9 @@
 			"12h": "12-hour clock",
 			"24h": "24-hour clock"
 		},
-		"firstDayOfWeek": {
-			"title": "First day of week",
-			"sunday": "Sunday",
-			"monday": "Monday"
-		}
+		"firstDayOfWeek": "First day of week"
 	},
 	"behaviorLabel": "Behavior",
-	"view": {
-		"title": "Default tab",
-		"members": "Member",
-		"journal": "Journal",
-		"dashboard": "Dashboard",
-		"chat": "Chats"
-	},
-	"defaultFilterLabel": "Default search query for",
-	"defaultFilterQueries": {
-		"members": "Members",
-		"journal": "Journal",
-		"tags": "Tags",
-		"frontingHistory": "Fronting history",
-		"messageBoard": "Message board"
-	}
+	"view": "Default tab",
+	"defaultFilterLabel": "Default search query for"
 }
