remove temp english strings from romanian translation

--- a/translations/ro/systemSettings.json
+++ b/translations/ro/systemSettings.json
@@ -3,6 +3,6 @@
 	"systemName": "Numele sistemului",
 	"systemDescription": "Descrierea sistemului",
 	"memberCount": "Numărul de membri",
-	"memberCountText": "{{memberCount}} membri",
+	"memberCountText": "{{memberCount}} membri, {{archived}} arhivați",
 	"tapToShow": "Atingeți pentru a afișa"
 }
