fix wrongly moved key in romanian translation

--- a/translations/ro/frontHistory.json
+++ b/translations/ro/frontHistory.json
@@ -13,6 +13,8 @@
 			"desc": "Nu veți putea anula această acțiune după ce salvați!"
 		},
 		"isMainFronter": "Fruntaș principal?",
-		"delete": "Ștergeți intrarea în frunte"
+		"delete": {
+			"title": "Ștergeți intrarea în frunte"
+		}
 	}
 }
