--- a/translations/it/importExport.json
+++ b/translations/it/importExport.json
@@ -8,10 +8,16 @@
 		"title": "Esporta i tuoi dati",
 		"desc": "Fai il backup dei tuoi dati così da poterli tenere da qualche altra parte"
 	},
+	"pkImport": {
+		"title": "Importa i tuoi dati da un export di PluralKit",
+		"desc": "Attenzione! Questo sovvrascriverà ogni dato esistente"
+	},
 	"status": {
 		"imported": "Il backup è stato importato. Si prega di far ripartire l'app.",
+		"importedPk": "L'export di PluralKit è stato importato. Si prega di far ripartire l'app.",
 		"exportedPwa": "Il backup è stato scaricato nella tua cartella degli scaricati.",
 		"exportedApp": "Il backup è stato esportato nella posizione scelta.",
-		"error": "Errore durante l'esportazione del backup."
+		"error": "Errore durante l'esportazione del backup.",
+		"errorPk": "Errore durante l'importazione dell'export di PluralKit."
 	}
 }
