fix tag management header italian translation key

--- a/translations/it/tagManagement.json
+++ b/translations/it/tagManagement.json
@@ -8,7 +8,7 @@
 	},
 	"edit": {
 		"header": {
-			"member": "Modifica tag deɜ membrə",
+			"member": "Modifica tag deɜ membrɜ",
 			"journal": "Modifica tag del diario"
 		},
 		"name": "Nome del tag",
