--- a/translations/ro/onboarding.json
+++ b/translations/ro/onboarding.json
@@ -8,6 +8,7 @@
 		"prevInstall": "Instalație anterioară",
 		"simplyPlural": "Simply Plural",
 		"pluralKit": "PluralKit",
+		"tupperbox": "Tupperbox",
 		"startFromScratch": "Nu, începem de la zero",
 		"pleaseWait": "Vă rugăm să așteptați în timp ce preluăm datele anterioare"
 	},
