--- a/translations/en/importExport.json
+++ b/translations/en/importExport.json
@@ -1,23 +1,21 @@
 {
 	"header": "Import / Export",
-	"dbImport": {
-		"title": "Import your data from a backup file",
-		"desc": "Warning! It will override any existing data"
-	},
 	"dbExport": {
 		"title": "Export your data",
 		"desc": "Backup your current data to a file you can store somewhere else"
 	},
-	"pkImport": {
-		"title": "Import your data from a PluralKit export",
-		"desc": "Warning! It will override any existing data"
-	},
+	"dbImportDesc": "Warning! It will override any existing data",
+	"dbImport": "Import your data from a backup file",
+	"pkImport": "Import your data from a PluralKit export",
+	"tuImport": "Import your data from a Tupperbox export",
 	"status": {
 		"imported": "The backup has been imported. Please restart the app.",
 		"importedPk": "The PluralKit export has been imported. Please restart the app.",
+		"importedTu": "The PluralKit export has been imported. Please restart the app.",
 		"exportedPwa": "The backup has been downloaded to your downloads folder.",
 		"exportedApp": "The backup has been exported to the location you chose.",
 		"error": "Error while exporting the backup.",
-		"errorPk": "Error while importing the PluralKit export."
+		"errorPk": "Error while importing the PluralKit export.",
+		"errorTu": "Error while importing the Tupperbox export."
 	}
 }
