--- a/translations/it/importExport.json
+++ b/translations/it/importExport.json
@@ -1,23 +1,21 @@
 {
 	"header": "Importa / Esporta",
-	"dbImport": {
-		"title": "Importa i tuoi dati da un file di backup",
-		"desc": "Attenzione! Questo sovvrascriverà ogni dato esistente"
-	},
 	"dbExport": {
 		"title": "Esporta i tuoi dati",
 		"desc": "Fai il backup dei tuoi dati così da poterli tenere da qualche altra parte"
 	},
-	"pkImport": {
-		"title": "Importa i tuoi dati da un export di PluralKit",
-		"desc": "Attenzione! Questo sovvrascriverà ogni dato esistente"
-	},
+	"dbImportDesc": "Attenzione! Questo sovvrascriverà ogni dato esistente",
+	"dbImport": "Importa i tuoi dati da un file di backup",
+	"pkImport": "Importa i tuoi dati da un export di PluralKit",
+	"tuImport": "Importa i tuoi dati da un export di Tupperbox",
 	"status": {
 		"imported": "Il backup è stato importato. Si prega di far ripartire l'app.",
 		"importedPk": "L'export di PluralKit è stato importato. Si prega di far ripartire l'app.",
+		"importedTu": "L'export di Tupperbox è stato importato. Si prega di far ripartire l'app.",
 		"exportedPwa": "Il backup è stato scaricato nella tua cartella degli scaricati.",
 		"exportedApp": "Il backup è stato esportato nella posizione scelta.",
 		"error": "Errore durante l'esportazione del backup.",
-		"errorPk": "Errore durante l'importazione dell'export di PluralKit."
+		"errorPk": "Errore durante l'importazione dell'export di PluralKit.",
+		"errorTu": "Errore durante l'importazione dell'export di Tupperbox."
 	}
 }
