--- a/translations/en/importExport.json
+++ b/translations/en/importExport.json
@@ -8,13 +8,16 @@
 	"dbImport": "Import your data from a backup file",
 	"pkImport": "Import your data from a PluralKit export",
 	"tuImport": "Import your data from a Tupperbox export",
+	"spImport": "Import your data from a Simply Plural export",
 	"status": {
 		"imported": "The backup has been imported. Please restart the app.",
+		"importedSp": "The Simply Plural export has been imported. Please restart the app.",
 		"importedPk": "The PluralKit export has been imported. Please restart the app.",
 		"importedTu": "The PluralKit export has been imported. Please restart the app.",
 		"exportedPwa": "The backup has been downloaded to your downloads folder.",
 		"exportedApp": "The backup has been exported to the location you chose.",
 		"error": "Error while exporting the backup.",
+		"errorSp": "Error while importing the Simply Plural export.",
 		"errorPk": "Error while importing the PluralKit export.",
 		"errorTu": "Error while importing the Tupperbox export."
 	}
