--- a/translations/en/messageBoard.json
+++ b/translations/en/messageBoard.json
@@ -14,6 +14,12 @@
 		"choice": {
 			"desc_one": "{{count}} voter",
 			"desc_other": "{{count}} voters"
+		},
+		"defaultPollValues": {
+			"yes": "Yes",
+			"no": "No",
+			"veto": "Veto",
+			"abstain": "Abstain"
 		}
 	},
 	"edit": {
