--- a/translations/it/messageBoard.json
+++ b/translations/it/messageBoard.json
@@ -14,6 +14,12 @@
 		"choice": {
 			"desc_one": "{{count}} votantə",
 			"desc_other": "{{count}} votantɜ"
+		},
+		"defaultPollValues": {
+			"yes": "Sì",
+			"no": "No",
+			"veto": "Veto",
+			"abstain": "Astenutə"
 		}
 	},
 	"edit": {
