--- a/translations/it/importExport.json
+++ b/translations/it/importExport.json
@@ -11,6 +11,7 @@
 	"tuImport": "Importa i tuoi dati da un export di Tupperbox",
 	"status": {
 		"imported": "Il backup è stato importato. Si prega di far ripartire l'app.",
+		"importedSp": "L'export di Simply Plural è stato importato. Si prega di far ripartire l'app.",
 		"importedPk": "L'export di PluralKit è stato importato. Si prega di far ripartire l'app.",
 		"importedTu": "L'export di Tupperbox è stato importato. Si prega di far ripartire l'app.",
 		"exportedPwa": "Il backup è stato scaricato nella tua cartella degli scaricati.",
