--- a/translations/it/members.json
+++ b/translations/it/members.json
@@ -17,6 +17,7 @@
 		"pronouns": "Pronomi",
 		"role": "Ruolo",
 		"color": "Colore preferito",
+		"customFieldsAdd": "Aggiungi campi personalizzati",
 		"tags": "Modifica i tag",
 		"description": "Descrizione",
 		"noDescription": "Nessuna descrizione",
