--- a/translations/en/importExport.json
+++ b/translations/en/importExport.json
@@ -16,7 +16,8 @@
 		"importedTu": "The PluralKit export has been imported. Please restart the app.",
 		"exportedPwa": "The backup has been downloaded to your downloads folder.",
 		"exportedApp": "The backup has been exported to the location you chose.",
-		"error": "Error while exporting the backup.",
+		"errorExport": "Error while exporting the backup.",
+		"error": "Error while importing the backup.",
 		"errorSp": "Error while importing the Simply Plural export.",
 		"errorPk": "Error while importing the PluralKit export.",
 		"errorTu": "Error while importing the Tupperbox export."
