Translations update from Codeberg Translate (#32)
Translations update from [Codeberg Translate](https://translate.codeberg.org) for [Ampersand/About](https://translate.codeberg.org/projects/ampersand/about/).

It also includes following components:

* [Ampersand/Reminders](https://translate.codeberg.org/projects/ampersand/reminders/)

* [Ampersand/Lock](https://translate.codeberg.org/projects/ampersand/lock/)

* [Ampersand/Options](https://translate.codeberg.org/projects/ampersand/options/)

* [Ampersand/System Settings](https://translate.codeberg.org/projects/ampersand/system-settings/)

* [Ampersand/Front History](https://translate.codeberg.org/projects/ampersand/front-history/)

* [Ampersand/Import/Export](https://translate.codeberg.org/projects/ampersand/import-export/)

* [Ampersand/Asset Manager](https://translate.codeberg.org/projects/ampersand/asset-manager/)

* [Ampersand/Members](https://translate.codeberg.org/projects/ampersand/members/)

* [Ampersand/Security](https://translate.codeberg.org/projects/ampersand/security/)

* [Ampersand/Custom Fields](https://translate.codeberg.org/projects/ampersand/custom-fields/)

* [Ampersand/Message Board](https://translate.codeberg.org/projects/ampersand/message-board/)

* [Ampersand/Journal](https://translate.codeberg.org/projects/ampersand/journal/)

* [Ampersand/Other](https://translate.codeberg.org/projects/ampersand/other/)

* [Ampersand/Accessibility](https://translate.codeberg.org/projects/ampersand/accessibility/)

* [Ampersand/Tag Management](https://translate.codeberg.org/projects/ampersand/tag-management/)

* [Ampersand/Onboarding](https://translate.codeberg.org/projects/ampersand/onboarding/)

* [Ampersand/App Settings](https://translate.codeberg.org/projects/ampersand/app-settings/)

* [Ampersand/Chats](https://translate.codeberg.org/projects/ampersand/chats/)

* [Ampersand/Dashboard](https://translate.codeberg.org/projects/ampersand/dashboard/)

Current translation status:

![Weblate translation status](

--- a/translations/it/tagManagement.json
+++ b/translations/it/tagManagement.json
@@ -1,38 +1,40 @@
 {
-	"header": "Gestione dei tag",
-	"searchPlaceholder": "Cerca tra i tag...",
-	"select": "Seleziona alcuni tag",
-	"selector": {
-		"member": "Tag deɜ membrɜ",
-		"journal": "Tag del diario"
-	},
-	"edit": {
-		"header": {
-			"member": "Modifica tag deɜ membrɜ",
-			"journal": "Modifica tag del diario"
-		},
-		"name": "Nome del tag",
-		"description": "Descrizione del tag",
-		"color": "Colore del tag",
-		"type": {
-			"header": "Tipo del tag",
-			"member": "Membrə",
-			"journal": "Diario",
-			"desc": "Nota: puoi definire il tipo del tag solo al momento della creazione!"
-		},
-		"members": {
-			"title": "Scegli lɜ membrɜ che usano questo tag",
-			"desc_one": "{{count}} membrə usa questo tag",
-			"desc_other": "{{count}} membrɜ usano questo tag"
-		},
-		"showJournal": {
-			"title": "Mostra le pagine del diario che usano questo tag",
-			"desc_one": "{{count}} pagina del diario usa questo tag",
-			"desc_other": "{{count}} pagine del diario usano questo tag"
-		},
-		"delete": {
-			"title": "Elimina tag",
-			"confirm": "Vuoi davvero eliminare questo tag?"
-		}
-	}
+    "header": "Gestione dei tag",
+    "searchPlaceholder": "Cerca tra i tag...",
+    "select": "Seleziona alcuni tag",
+    "selector": {
+        "member": "Tag deɜ membrɜ",
+        "journal": "Tag del diario"
+    },
+    "edit": {
+        "header": {
+            "member": "Modifica tag deɜ membrɜ",
+            "journal": "Modifica tag del diario"
+        },
+        "name": "Nome del tag",
+        "description": "Descrizione del tag",
+        "color": "Colore del tag",
+        "type": {
+            "header": "Tipo del tag",
+            "member": "Membrə",
+            "journal": "Diario",
+            "desc": "Nota: puoi definire il tipo del tag solo al momento della creazione!"
+        },
+        "members": {
+            "title": "Scegli lɜ membrɜ che usano questo tag",
+            "desc_one": "{{count}} membrə usa questo tag",
+            "desc_many": "{{count}} membrɜ usano questo tag",
+            "desc_other": "{{count}} membrɜ usano questo tag"
+        },
+        "showJournal": {
+            "title": "Mostra le pagine del diario che usano questo tag",
+            "desc_one": "{{count}} pagina del diario usa questo tag",
+            "desc_many": "{{count}} pagine del diario usano questo tag",
+            "desc_other": "{{count}} pagine del diario usano questo tag"
+        },
+        "delete": {
+            "title": "Elimina tag",
+            "confirm": "Vuoi davvero eliminare questo tag?"
+        }
+    }
 }
