--- a/translations/ro/about.json
+++ b/translations/ro/about.json
@@ -1,5 +1,5 @@
 {
-	"header": "Despre",
-	"version": "Versiunea {{version}}",
-	"madein": "Făcut cu dragoste în Italia."
+    "header": "Despre",
+    "version": "Versiunea {{version}}",
+    "madein": "Făcut cu dragoste în Italia"
 }
