--- a/translations/ro/systemSettings.json
+++ b/translations/ro/systemSettings.json
@@ -1,8 +1,8 @@
 {
-	"header": "Numele sistemului și poza",
-	"systemName": "Numele sistemului",
-	"systemDescription": "Descrierea sistemului",
-	"memberCount": "Numărul de membri",
-	"memberCountText": "{{memberCount}} membri, {{archived}} arhivați",
-	"tapToShow": "Atingeți pentru a afișa"
+    "header": "Numele sistemului și poza",
+    "systemName": "Numele sistemului",
+    "systemDescription": "Descrierea sistemului",
+    "memberCount": "Numărul de membri",
+    "memberCountText": "{{memberCount}} membri, {{archivedMemberCount}} arhivați",
+    "tapToShow": "Atingeți pentru a afișa"
 }
