fix backbutton translations and icon

--- a/translations/it/other.json
+++ b/translations/it/other.json
@@ -12,6 +12,7 @@
         "ok": "Ok",
         "cancel": "Annulla"
     },
+    "back": "Indietro",
     "time": "Ora",
     "timeSizes": {
         "years": {
